{
  "version": 4,
  "terraform_version": "1.14.9",
  "serial": 390,
  "lineage": "114895a8-f0d4-d718-2035-bb0f0ff8e472",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:748503131867:loadbalancer/app/poc-alb/d0c5608220a97c46",
            "arn_suffix": "app/poc-alb/d0c5608220a97c46",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "poc-alb-1880135251.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:748503131867:loadbalancer/app/poc-alb/d0c5608220a97c46",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "poc-alb",
            "preserve_host_header": false,
            "region": "ap-south-1",
            "security_groups": [
              "sg-0f0c07d38e2d78dbc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00c0cbaebb0aea335"
              },
              {
                "subnet_id": "subnet-0ce20cc94679acda7"
              },
              {
                "subnet_id": "subnet-0d2612caf8f750135"
              }
            ],
            "subnets": [
              "subnet-00c0cbaebb0aea335",
              "subnet-0ce20cc94679acda7",
              "subnet-0d2612caf8f750135"
            ],
            "tags": {
              "Name": "poc-alb"
            },
            "tags_all": {
              "Name": "poc-alb"
            },
            "vpc_id": "vpc-095660b17cbd08778",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:748503131867:loadbalancer/app/poc-alb/d0c5608220a97c46"
          },
          "dependencies": [
            "module.sg.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:748503131867:listener/app/poc-alb/d0c5608220a97c46/52d4416e221c8463",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:748503131867:targetgroup/poc-tg/e02c46cac19c1204",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:748503131867:listener/app/poc-alb/d0c5608220a97c46/52d4416e221c8463",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:748503131867:loadbalancer/app/poc-alb/d0c5608220a97c46",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-south-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:748503131867:listener/app/poc-alb/d0c5608220a97c46/52d4416e221c8463"
          },
          "dependencies": [
            "module.alb.aws_lb.alb",
            "module.alb.aws_lb_target_group.tg",
            "module.sg.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:748503131867:targetgroup/poc-tg/e02c46cac19c1204",
            "arn_suffix": "targetgroup/poc-tg/e02c46cac19c1204",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:748503131867:targetgroup/poc-tg/e02c46cac19c1204",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:748503131867:loadbalancer/app/poc-alb/d0c5608220a97c46"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "poc-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-095660b17cbd08778"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:748503131867:targetgroup/poc-tg/e02c46cac19c1204"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.kafka",
      "mode": "managed",
      "type": "aws_instance",
      "name": "kafka",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0e12ffc2dd465f6e4",
            "arn": "arn:aws:ec2:ap-south-1:748503131867:instance/i-062ee9e69cf8979d0",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "poc-ec2-ssm-role",
            "id": "i-062ee9e69cf8979d0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0eed6a177c87deb4a"
              }
            ],
            "primary_network_interface_id": "eni-0eed6a177c87deb4a",
            "private_dns": "ip-10-0-57-56.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.57.56",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05fe6e9c73a228f3e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-017e289b6b952c3c1",
            "tags": {
              "Environment": "poc",
              "Name": "poc-kafka"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "poc-kafka"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ed9795eb2a799bf5"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "748503131867",
            "id": "i-062ee9e69cf8979d0",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.alb_sg",
            "module.sg.aws_security_group.ecs_sg",
            "module.sg.aws_security_group.kafka_sg",
            "module.vpc.aws_subnet.private_app_subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:748503131867:security-group/sg-0f0c07d38e2d78dbc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f0c07d38e2d78dbc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "poc-alb-sg",
            "name_prefix": "",
            "owner_id": "748503131867",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-095660b17cbd08778"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "748503131867",
            "id": "sg-0f0c07d38e2d78dbc",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:748503131867:security-group/sg-01ea316a075a6d1f1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ECS to access all services",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01ea316a075a6d1f1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow ALB to access ECS",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f0c07d38e2d78dbc"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "poc-ecs-sg",
            "name_prefix": "",
            "owner_id": "748503131867",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-095660b17cbd08778"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "748503131867",
            "id": "sg-01ea316a075a6d1f1",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.alb_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "kafka_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:748503131867:security-group/sg-0ed9795eb2a799bf5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ed9795eb2a799bf5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow ECS to access Kafka",
                "from_port": 9092,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01ea316a075a6d1f1"
                ],
                "self": false,
                "to_port": 9092
              }
            ],
            "name": "poc-kafka-sg",
            "name_prefix": "",
            "owner_id": "748503131867",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-095660b17cbd08778"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "748503131867",
            "id": "sg-0ed9795eb2a799bf5",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.alb_sg",
            "module.sg.aws_security_group.ecs_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "memcached_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:748503131867:security-group/sg-0cf795af52b02a15a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cf795af52b02a15a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow ECS to access Memcached",
                "from_port": 11211,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01ea316a075a6d1f1"
                ],
                "self": false,
                "to_port": 11211
              }
            ],
            "name": "poc-memcached-sg",
            "name_prefix": "",
            "owner_id": "748503131867",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-095660b17cbd08778"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "748503131867",
            "id": "sg-0cf795af52b02a15a",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.alb_sg",
            "module.sg.aws_security_group.ecs_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:748503131867:security-group/sg-0a0664cfb99baa4c6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a0664cfb99baa4c6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow ECS to connect MySQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01ea316a075a6d1f1"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "poc-rds-sg",
            "name_prefix": "",
            "owner_id": "748503131867",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-095660b17cbd08778"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "748503131867",
            "id": "sg-0a0664cfb99baa4c6",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.alb_sg",
            "module.sg.aws_security_group.ecs_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "natA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-069a5470c581bea5c",
            "arn": "arn:aws:ec2:ap-south-1:748503131867:elastic-ip/eipalloc-069a5470c581bea5c",
            "association_id": "eipassoc-012d7e90e3c07e939",
            "domain": "vpc",
            "id": "eipalloc-069a5470c581bea5c",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0677214b00c078e31",
            "private_dns": "ip-10-0-12-240.ap-south-1.compute.internal",
            "private_ip": "10.0.12.240",
            "public_dns": "ec2-13-127-122-23.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.127.122.23",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:748503131867:internet-gateway/igw-098f428fae5d38945",
            "id": "igw-098f428fae5d38945",
            "owner_id": "748503131867",
            "region": "ap-south-1",
            "tags": {
              "Environment": "poc",
              "Name": "poc-IGW"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "poc-IGW"
            },
            "vpc_id": "vpc-095660b17cbd08778"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngwA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-069a5470c581bea5c",
            "association_id": "eipassoc-012d7e90e3c07e939",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0cd3cd130af4f03a1",
            "network_interface_id": "eni-0677214b00c078e31",
            "private_ip": "10.0.12.240",
            "public_ip": "13.127.122.23",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ce20cc94679acda7",
            "tags": {
              "Environment": "poc",
              "Name": "poc-NAT-GW",
              "owner": "rudra"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "poc-NAT-GW",
              "owner": "rudra"
            },
            "vpc_id": "vpc-095660b17cbd08778"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "748503131867",
            "id": "nat-0cd3cd130af4f03a1",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_eip.natA",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0b2db0f02d1ebf0991080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0cd3cd130af4f03a1",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-0b2db0f02d1ebf099",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "748503131867",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-0b2db0f02d1ebf099"
          },
          "dependencies": [
            "module.vpc.aws_eip.natA",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_nat_gateway.ngwA",
            "module.vpc.aws_route_table.rtb_private_app",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-098f428fae5d38945",
            "id": "r-rtb-0533e12f17bb191891080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-south-1",
            "route_table_id": "rtb-0533e12f17bb19189",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "748503131867",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-south-1",
            "route_table_id": "rtb-0533e12f17bb19189"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.rtb_public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:748503131867:route-table/rtb-0b2db0f02d1ebf099",
            "id": "rtb-0b2db0f02d1ebf099",
            "owner_id": "748503131867",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cd3cd130af4f03a1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "poc",
              "Name": "poc-private-app-route-table"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "poc-private-app-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-095660b17cbd08778"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "748503131867",
            "id": "rtb-0b2db0f02d1ebf099",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:748503131867:route-table/rtb-0067e800153448318",
            "id": "rtb-0067e800153448318",
            "owner_id": "748503131867",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Environment": "poc",
              "Name": "poc-private-db-route-table"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "poc-private-db-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-095660b17cbd08778"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "748503131867",
            "id": "rtb-0067e800153448318",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:748503131867:route-table/rtb-0533e12f17bb19189",
            "id": "rtb-0533e12f17bb19189",
            "owner_id": "748503131867",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-098f428fae5d38945",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "poc",
              "Name": "poc-public-route-table"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "poc-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-095660b17cbd08778"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "748503131867",
            "id": "rtb-0533e12f17bb19189",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_control_plane_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff5b7aeb69519f1d",
            "region": "ap-south-1",
            "route_table_id": "rtb-0b2db0f02d1ebf099",
            "subnet_id": "subnet-017e289b6b952c3c1"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "748503131867",
            "id": "rtbassoc-0ff5b7aeb69519f1d",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.rtb_private_app",
            "module.vpc.aws_subnet.private_app_subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ecd30e4d636d4c99",
            "region": "ap-south-1",
            "route_table_id": "rtb-0b2db0f02d1ebf099",
            "subnet_id": "subnet-0413a0a776e810d0e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "748503131867",
            "id": "rtbassoc-0ecd30e4d636d4c99",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.rtb_private_app",
            "module.vpc.aws_subnet.private_app_subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09da2a9eaea9b7e69",
            "region": "ap-south-1",
            "route_table_id": "rtb-0b2db0f02d1ebf099",
            "subnet_id": "subnet-03a53d1179de885ed"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "748503131867",
            "id": "rtbassoc-09da2a9eaea9b7e69",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.rtb_private_app",
            "module.vpc.aws_subnet.private_app_subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_association_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01d070122679276e9",
            "region": "ap-south-1",
            "route_table_id": "rtb-0067e800153448318",
            "subnet_id": "subnet-08f25cb083c39ba7e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "748503131867",
            "id": "rtbassoc-01d070122679276e9",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.rtb_private_db",
            "module.vpc.aws_subnet.private_db_subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a349bb196b13c13",
            "region": "ap-south-1",
            "route_table_id": "rtb-0067e800153448318",
            "subnet_id": "subnet-06ba0b288390440b0"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "748503131867",
            "id": "rtbassoc-02a349bb196b13c13",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.rtb_private_db",
            "module.vpc.aws_subnet.private_db_subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c40bdf821633f16",
            "region": "ap-south-1",
            "route_table_id": "rtb-0067e800153448318",
            "subnet_id": "subnet-037dfbce341a9c64b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "748503131867",
            "id": "rtbassoc-00c40bdf821633f16",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.rtb_private_db",
            "module.vpc.aws_subnet.private_db_subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2c0d17cc2e5f412",
            "region": "ap-south-1",
            "route_table_id": "rtb-0533e12f17bb19189",
            "subnet_id": "subnet-0ce20cc94679acda7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "748503131867",
            "id": "rtbassoc-0b2c0d17cc2e5f412",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.rtb_public",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9caade9d4ac7f84",
            "region": "ap-south-1",
            "route_table_id": "rtb-0533e12f17bb19189",
            "subnet_id": "subnet-0d2612caf8f750135"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "748503131867",
            "id": "rtbassoc-0c9caade9d4ac7f84",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.rtb_public",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-097bf50823498be1e",
            "region": "ap-south-1",
            "route_table_id": "rtb-0533e12f17bb19189",
            "subnet_id": "subnet-00c0cbaebb0aea335"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "748503131867",
            "id": "rtbassoc-097bf50823498be1e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.rtb_public",
            "module.vpc.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:748503131867:subnet/subnet-017e289b6b952c3c1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017e289b6b952c3c1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "748503131867",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "poc",
              "Name": "poc-private-app-subnet-0",
              "Tier": "private-app-subnet",
              "owner": "rudra"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "poc-private-app-subnet-0",
              "Tier": "private-app-subnet",
              "owner": "rudra"
            },
            "vpc_id": "vpc-095660b17cbd08778"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "748503131867",
            "id": "subnet-017e289b6b952c3c1",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:748503131867:subnet/subnet-0413a0a776e810d0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0413a0a776e810d0e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "748503131867",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "poc",
              "Name": "poc-private-app-subnet-1",
              "Tier": "private-app-subnet",
              "owner": "rudra"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "poc-private-app-subnet-1",
              "Tier": "private-app-subnet",
              "owner": "rudra"
            },
            "vpc_id": "vpc-095660b17cbd08778"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "748503131867",
            "id": "subnet-0413a0a776e810d0e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:748503131867:subnet/subnet-03a53d1179de885ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a53d1179de885ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "748503131867",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "poc",
              "Name": "poc-private-app-subnet-2",
              "Tier": "private-app-subnet",
              "owner": "rudra"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "poc-private-app-subnet-2",
              "Tier": "private-app-subnet",
              "owner": "rudra"
            },
            "vpc_id": "vpc-095660b17cbd08778"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "748503131867",
            "id": "subnet-03a53d1179de885ed",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:748503131867:subnet/subnet-08f25cb083c39ba7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.96.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08f25cb083c39ba7e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "748503131867",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "poc",
              "Name": "poc-private-db-subnet-0",
              "Tier": "private-db-subnet",
              "owner": "rudra"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "poc-private-db-subnet-0",
              "Tier": "private-db-subnet",
              "owner": "rudra"
            },
            "vpc_id": "vpc-095660b17cbd08778"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "748503131867",
            "id": "subnet-08f25cb083c39ba7e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:748503131867:subnet/subnet-06ba0b288390440b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.112.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ba0b288390440b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "748503131867",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "poc",
              "Name": "poc-private-db-subnet-1",
              "Tier": "private-db-subnet",
              "owner": "rudra"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "poc-private-db-subnet-1",
              "Tier": "private-db-subnet",
              "owner": "rudra"
            },
            "vpc_id": "vpc-095660b17cbd08778"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "748503131867",
            "id": "subnet-06ba0b288390440b0",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:748503131867:subnet/subnet-037dfbce341a9c64b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-037dfbce341a9c64b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "748503131867",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "poc",
              "Name": "poc-private-db-subnet-2",
              "Tier": "private-db-subnet",
              "owner": "rudra"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "poc-private-db-subnet-2",
              "Tier": "private-db-subnet",
              "owner": "rudra"
            },
            "vpc_id": "vpc-095660b17cbd08778"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "748503131867",
            "id": "subnet-037dfbce341a9c64b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:748503131867:subnet/subnet-0ce20cc94679acda7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce20cc94679acda7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "748503131867",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "poc",
              "Name": "poc-public-subnet-0",
              "Tier": "public-subnet",
              "owner": "rudra"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "poc-public-subnet-0",
              "Tier": "public-subnet",
              "owner": "rudra"
            },
            "vpc_id": "vpc-095660b17cbd08778"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "748503131867",
            "id": "subnet-0ce20cc94679acda7",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:748503131867:subnet/subnet-0d2612caf8f750135",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d2612caf8f750135",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "748503131867",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "poc",
              "Name": "poc-public-subnet-1",
              "Tier": "public-subnet",
              "owner": "rudra"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "poc-public-subnet-1",
              "Tier": "public-subnet",
              "owner": "rudra"
            },
            "vpc_id": "vpc-095660b17cbd08778"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "748503131867",
            "id": "subnet-0d2612caf8f750135",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:748503131867:subnet/subnet-00c0cbaebb0aea335",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00c0cbaebb0aea335",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "748503131867",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "poc",
              "Name": "poc-public-subnet-2",
              "Tier": "public-subnet",
              "owner": "rudra"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "poc-public-subnet-2",
              "Tier": "public-subnet",
              "owner": "rudra"
            },
            "vpc_id": "vpc-095660b17cbd08778"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "748503131867",
            "id": "subnet-00c0cbaebb0aea335",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:748503131867:vpc/vpc-095660b17cbd08778",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e2db02aed784f82a",
            "default_route_table_id": "rtb-0437642a7e42e2899",
            "default_security_group_id": "sg-005bd82abe40a3ba0",
            "dhcp_options_id": "dopt-0ad0ea460a4982afc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-095660b17cbd08778",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0437642a7e42e2899",
            "owner_id": "748503131867",
            "region": "ap-south-1",
            "tags": {
              "Environment": "poc",
              "Name": "poc-vpc",
              "owner": "rudra"
            },
            "tags_all": {
              "Environment": "poc",
              "Name": "poc-vpc",
              "owner": "rudra"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "748503131867",
            "id": "vpc-095660b17cbd08778",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}